Fixes heading wrap on homepage blurbs

--- a/assets/scss/phase3/_mt-b-blurb--alt.scss
+++ b/assets/scss/phase3/_mt-b-blurb--alt.scss
@@ -11,6 +11,7 @@
     height: 65px;
     float: left;
     margin-right: 1rem;
+    margin-bottom: 0.5rem;
     top: 6px;
     position: relative;
   }
